PR corrections
1)java.net.URLDecoder.decode(String, Charset) is now used
2)Tests from acceptEncodedDoiUrl moved to testData
3)rewriteRun task has been executed